Re-publication de l'article sur hudson
Re-publication de l'article sur hudson maintenant que l'entête est bien
gérée (après avoir supprimé le bom utf8 qui foutait la merXXX)

--- a/_posts/2012-04-11-jenkins_fr.textile
+++ b/_posts/2012-04-11-jenkins_fr.textile
@@ -6,7 +6,7 @@ categories: .Net
 tags:
 - Jenkins
 - Integration Continue
-published: false
+published: true
 ---
 h1. Qu'est ce qu'une usine logicielle ?
 
