--- a/_posts/2012-04-12-git-tfs_fr.textile
+++ b/_posts/2012-04-12-git-tfs_fr.textile
@@ -73,7 +73,7 @@ Note : Lors d'un commit local, on peut ajouter des références aux éléments d
 @git-tfs-work-item: <id> associate@ 
 @git-tfs-work-item: <id> resolve@
 
-###.<!--
+notextile. <!--
 Annexe :
 http://www.drrandom.org/post/2011/11/16/Grappling-with-multiple-remotes-in-git-tfs.aspx
 http://stackoverflow.com/questions/8559814/merge-two-tfs-branches-with-git-tfs
@@ -101,6 +101,6 @@ La liste de fichier ignorés :
 
 git ls-files -v | grep ^[a-z]
 http://gitready.com/intermediate/2009/02/18/temporarily-ignoring-files.html
--->
-###.
+notextile. -->
+
 
